# routes/api.js
@@ -1,11 +1,15 @@
 const express = require('express');
 const router = express.Router();
 const itemController = require('../controllers/itemController');
+const verifyJWT = require('../middlewares/authMiddleware');
 
-router.post('/items', itemController.createItem);
-router.get('/items', itemController.getAllItems);
-router.get('/items/:id', itemController.getItem);
-router.put('/items/:id', itemController.updateItem);
-router.delete('/items/:id', itemController.deleteItem);
+
+
+// Rutas protegidas con JWT
+router.get('/items', verifyJWT, itemController.getAllItems);
+router.get('/items/:id', verifyJWT, itemController.getItem);
+router.post('/items', verifyJWT, itemController.createItem);
+router.put('/items/:id', verifyJWT, itemController.updateItem);
+router.delete('/items/:id', verifyJWT, itemController.deleteItem);
 
 module.exports = router;
